Fix social icon gap

--- a/style/A1style.css
+++ b/style/A1style.css
@@ -220,3 +220,9 @@ h1 .not{
     width: 1360px;
     margin-top: 80px;
 }
+.tlf #x{
+    margin-right: 16px;
+}
+.tlf #l{
+    margin-right: 16px;
+}
